<resources>
    <string name="app_name">MY WAY</string>
    <string name="title_activity_maps">MY WAY</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="authors">von Annika, Madlon, Vicky</string>
    <string name="myWayCapitals">MY WAY</string>
    <string name="launcherIconQ">LauncherIconQ</string>
    <string name="start_tracking">Tracking starten</string>
    <string name="stop_tracking">Tracking beenden</string>
    <string name="nav_position">Position</string>
    <string name="nav_means_of_transport">Verkehrsmittel</string>
    <string name="nav_tracks">Tracks</string>
    <string name="track_act">TRACKING AKTIV</string>
    <string name="tracking_active">TRACKING IST AKTIV</string>
    <string name="button_public_transport">ÖPNV</string>
    <string name="button_car">Auto</string>
    <string name="button_bike">Fahrrad</string>
    <string name="button_walk">Zu Fuß</string>
    <string name="transport_mode_choice">Verkehrsmittel wählen</string>
    <string name="transport_mode">Verkehrsmittel: </string>
    <string name="duration">Dauer: </string>
    <string name="distance">Distanz: </string>
    <string name="date">Datum: </string>
    <string name="track_number">Trackingnummer: </string>
    <string name="title_activity_list">GESPEICHERTE TRACKINGS</string>
    <string name="save">Speichern ?</string>
    <string name="show_list">Liste</string>


</resources>
