<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.madlo.mywaytest1.DetailedView">

    <TextView
        android:id="@+id/textView_TransportTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="30dp"
        android:text="@string/transport_mode"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView_TransportField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_TransportTag"
        android:layout_below="@+id/textView_TransportTag"
        android:layout_marginTop="10dp"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/textView_DurationTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_TransportField"
        android:layout_marginTop="28dp"
        android:layout_toEndOf="@+id/textView_DurationField"
        android:layout_toRightOf="@+id/textView_DurationField"
        android:text="@string/duration"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView_DurationField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="textStart"
        android:layout_below="@+id/textView_DurationTag"
        android:layout_alignStart="@+id/textView_DistanceTag" />

    <TextView
        android:id="@+id/textView_DistanceTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_DurationField"
        android:layout_marginTop="27dp"
        android:layout_toEndOf="@+id/textView_TransportField"
        android:layout_toRightOf="@+id/textView_TransportField"
        android:text="@string/distance"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView_DistanceField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="textStart"
        android:layout_below="@+id/textView_DistanceTag"
        android:layout_alignStart="@+id/textView_DurationField" />

    <TextView
        android:id="@+id/textView_DateTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_DistanceField"
        android:layout_marginTop="31dp"
        android:layout_toEndOf="@+id/textView_DateField"
        android:layout_toRightOf="@+id/textView_DateField"
        android:text="@string/date"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView_DateField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="textStart"
        android:layout_below="@+id/textView_DateTag"
        android:layout_alignStart="@+id/textView_DistanceField" />

    <TextView
        android:id="@+id/textView_TrackNumberTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_DateField"
        android:layout_marginTop="29dp"
        android:layout_toEndOf="@+id/textView_TrackNumberField"
        android:layout_toRightOf="@+id/textView_TrackNumberField"
        android:text="@string/track_number"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView_TrackNumberField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="textStart"
        android:layout_below="@+id/textView_TrackNumberTag"
        android:layout_alignStart="@+id/textView_DateField" />


</RelativeLayout>
