<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <include
        layout="@layout/app_bar_navigation_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_navigation_drawer"
        app:menu="@menu/activity_navigation_drawer_drawer">

    </android.support.design.widget.NavigationView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_start_tracking"
            android:layout_width="165dp"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#546e7a"
            android:elevation="16dp"
            android:text="@string/start_tracking"
            android:textColor="#FFFF00"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_stop_tracking"
            android:layout_width="165dp"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#FFFF00"
            android:text="@string/stop_tracking"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_view_tracking_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_stop_tracking"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="73dp"
            android:background="#FFFF00"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text=""
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_view_tracking_active"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_stop_tracking"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="73dp"
            android:background="#FFFF00"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/tracking_active"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_Save"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_above="@+id/button_start_tracking"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="9dp"
            android:background="@mipmap/save_button"

            android:visibility="gone" />

        <Button
            android:id="@+id/button_showList"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@mipmap/trackings_button"
            android:layout_marginLeft="305dp"
            android:layout_marginStart="305dp"
            android:layout_alignParentBottom="true" />


    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
